--- a/templates/actor/_partials/_stats.hbs
+++ b/templates/actor/_partials/_stats.hbs
@@ -152,17 +152,37 @@
     </div>
   </div>
 
-  {{> "systems/l5r4/templates/actor/_partials/_skills-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_weapon-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_armor-section.hbs"}}
+  {{#if skills.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_skills-section.hbs"}}
+  {{/if}}
+  {{#if (or weapons.length bows.length)}}
+    {{> "systems/l5r4/templates/actor/_partials/_weapon-section.hbs"}}
+  {{/if}}
+  {{#if armors.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_armor-section.hbs"}}
+  {{/if}}
   {{> "systems/l5r4/templates/actor/_partials/_item-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_spell-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_technique-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_kiho-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_kata-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_tattoo-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_advantage-section.hbs"}}
-  {{> "systems/l5r4/templates/actor/_partials/_disadvantage-section.hbs"}}
+  {{#if spells.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_spell-section.hbs"}}
+  {{/if}}
+  {{#if techniques.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_technique-section.hbs"}}
+  {{/if}}
+  {{#if kihos.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_kiho-section.hbs"}}
+  {{/if}}
+  {{#if katas.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_kata-section.hbs"}}
+  {{/if}}
+  {{#if tattoos.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_tattoo-section.hbs"}}
+  {{/if}}
+  {{#if advantages.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_advantage-section.hbs"}}
+  {{/if}}
+  {{#if disadvantages.length}}
+    {{> "systems/l5r4/templates/actor/_partials/_disadvantage-section.hbs"}}
+  {{/if}}
   {{> "systems/l5r4/templates/actor/_partials/_bio.hbs"}}
 
   <section class="flexcol -gap-sm">
