--- a/templates/actor/_partials/_item-section.hbs
+++ b/templates/actor/_partials/_item-section.hbs
@@ -1,18 +1,28 @@
 <section class="flexcol -gap-sm">
   <div class="flexrow -gap-sm section-title">
     <h4 class="title">{{localize "l5r4.ui.sheets.items"}}</h4>
-    <a class="button inline-control icon" data-action="item-create" data-type="commonItem" title="{{localize "l5r4.ui.sheets.addItem"}}">
-      <i class="fas fa-plus"></i>
-    </a>
+    <div class="flexrow flex0 wealth">
+      <span>{{localize "l5r4.world.wealth.koku"}}:</span>
+      <input type="text" name="system.wealth.koku" value="{{system.wealth.koku}}" placeholder="0" />
+    </div>
+    <div class="flexrow flex0 wealth">
+      <span>{{localize "l5r4.world.wealth.bu"}}:</span>
+      <input type="text" name="system.wealth.bu" value="{{system.wealth.bu}}" placeholder="0" />
+    </div>
+    <div class="flexrow flex0 wealth">
+      <span>{{localize "l5r4.world.wealth.zeni"}}:</span>
+      <input type="text" name="system.wealth.zeni" value="{{system.wealth.zeni}}" placeholder="0" />
+    </div>
+    {{> "systems/l5r4/templates/actor/_partials/_unified-item-create.hbs"}}
     {{> "systems/l5r4/templates/actor/_partials/_expand.hbs"}}
   </div>
   {{#if items.length}}
-    <section class="item-list -equipment -header" data-scope="items">
+    <section class="item-list -commonItem -header" data-scope="items">
       <div class="item">
-        <a class="item-sort-by" data-sortby="name">{{localize "l5r4.ui.common.name"}}</a>
+        <a class="item-sort-by" data-action="item-sort-by" data-sortby="name">{{localize "l5r4.ui.common.name"}}</a>
       </div>
     </section>
-    <section class="item-list -equipment">
+    <section class="item-list -commonItem">
       {{#each items as |item id|}}
         {{> "systems/l5r4/templates/cards/commonItem.hbs"
             system=item.system
