--- a/templates/actor/pc.hbs
+++ b/templates/actor/pc.hbs
@@ -2,7 +2,9 @@
   <div class="main-sheet">
     {{> "systems/l5r4/templates/actor/_partials/_stats.hbs"}}
     <div class="flexcol -gap-sm sidebar">
-      <img class="actor-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
+      <div class="actor-img">
+        <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
+      </div>
       {{> "systems/l5r4/templates/actor/_partials/_ranks.hbs"}}
       {{> "systems/l5r4/templates/actor/_partials/_initiative.hbs"}}
       {{> "systems/l5r4/templates/actor/_partials/_armor.hbs"}}
