--- a/templates/actor/_partials/_spell-section.hbs
+++ b/templates/actor/_partials/_spell-section.hbs
@@ -1,5 +1,5 @@
 <section class="flexcol -gap-sm">
-  <div class="flexrow -gap-sm section-title">
+  <div class="flexrow -gap-sm section-title" data-scope="spells">
     <h4 class="title">{{localize "l5r4.ui.sheets.spells"}}</h4>
     <div class="flexrow -gap-sm spells">
         <span>{{localize "l5r4.ui.sheets.spellSlots"}}:</span>
