--- a/l5r4.css
+++ b/l5r4.css
@@ -93,7 +93,7 @@ body > * {
 .l5r4.npc .window-content {
   flex-flow: row;
   gap: 1rem;
-  overflow: auto;
+  overflow-y: auto;
   padding: 0;
 }
 .l5r4.pc .window-content > .flexcol,
@@ -107,20 +107,10 @@ body > * {
 .l5r4.pc .main-sheet,
 .l5r4.npc .main-sheet {
   column-gap: 1rem;
-  display: flex;
+  display: inline-grid;
+  grid-template-columns: 1fr min-content;
   height: 100%;
-  width: 100%;
-}
-.l5r4.pc .main-sheet > .stats,
-.l5r4.npc .main-sheet > .stats {
-  flex: 1;
-  min-width: 0;
-  overflow-x: auto;
-}
-.l5r4.pc .main-sheet > .sidebar,
-.l5r4.npc .main-sheet > .sidebar {
-  flex-shrink: 0;
-  width: 240px;
+  width: calc(100% - 2px);
 }
 .l5r4.pc input,
 .l5r4.npc input,
@@ -564,6 +554,7 @@ body > * {
   grid-template-columns: 1fr 32px 32px 32px 32px 32px 32px 8px 8px 32px 32px 32px 32px 32px 32px 1fr;
   grid-template-rows: min-content 1fr 1fr 2px 1fr 1fr 1fr min-content min-content;
   justify-items: center;
+  overflow: hidden;
 }
 .l5r4.pc .traits-rings .ring-name,
 .l5r4.npc .traits-rings .ring-name {
