--- a/less/actor-sheet.less
+++ b/less/actor-sheet.less
@@ -6,7 +6,7 @@
   .window-content {
     flex-flow: row;
     gap: 1rem;
-    overflow: auto;
+    overflow-y: auto;
     padding: 0;
 
     > .flexcol {
@@ -20,23 +20,10 @@
 
   .main-sheet {
     column-gap: 1rem;
-    display: flex;
+    display: inline-grid;
+    grid-template-columns: 1fr min-content;
     height: 100%;
-    width: 100%;
-    // min-height: 0;
-
-    > .stats {
-      // flex: 1 1 1px;
-      flex: 1;
-      min-width: 0;
-      overflow-x: auto;
-    }
-
-    > .sidebar {
-      // overflow: hidden;
-      flex-shrink: 0;
-      width: 240px;
-    }
+    width: calc(100% - 2px);
   }
 
   input,
