--- a/templates/actor/_partials/_item-section.hbs
+++ b/templates/actor/_partials/_item-section.hbs
@@ -1,5 +1,5 @@
 <section class="flexcol -gap-sm">
-  <div class="flexrow -gap-sm section-title">
+  <div class="flexrow -gap-sm section-title" data-scope="items">
     <h4 class="title">{{localize "l5r4.ui.sheets.items"}}</h4>
     <div class="flexrow flex0 wealth">
       <span>{{localize "l5r4.world.wealth.koku"}}:</span>
