--- a/templates/actor/_partials/_kiho-section.hbs
+++ b/templates/actor/_partials/_kiho-section.hbs
@@ -1,5 +1,5 @@
 <section class="flexcol -gap-sm">
-  <div class="flexrow -gap-sm section-title">
+  <div class="flexrow -gap-sm section-title" data-scope="kihos">
     <h4 class="title">{{localize "l5r4.ui.sheets.kiho"}}</h4>
     {{> "systems/l5r4/templates/actor/_partials/_unified-item-create.hbs"}}
     {{> "systems/l5r4/templates/actor/_partials/_expand.hbs"}}
