--- a/templates/actor/limited-npc-sheet.hbs
+++ b/templates/actor/limited-npc-sheet.hbs
@@ -1,6 +1,6 @@
-<form class="{{cssClass}} limited" autocomplete="off">
-  <h1 class="name">{{actor.name}}</h1>
-  <div class="limited-sheet">
+<form class="{{cssClass}} limited flexcol -gap-sm" autocomplete="off">
+  <h1 class="name flex0">{{actor.name}}</h1>
+  <div class="limited-sheet flex1">
     <img class="actor-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
   </div>
 </form>
